apps/media/torrent/k8s-manifests/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: torrent
  namespace: media
subsets:
- addresses:
  - ip: 192.168.1.48
  ports:
  - port: 6363
