apps/media/torrent/k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: media
spec:
  ports:
  - port: 3200
    targetPort: 3200
