apps/media/torrent/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-secret: torrent-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: torrent
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: torrent.rmikl.pl
    http:
      paths:
      - backend:
          service:
            name: torrent
            port:
              number: 3200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - torrent.rmikl.pl
    secretName: rmikl.pl
